crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__sheep_pane.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                                                                    1 in the flock
 ██ SHEEP 20  web   online   pid 48500   restarts 0   uptime 1h 55m   cpu 20.0%   mem 30.0M   fold edge                                                         
██ CPU   collecting · 0m08s of 4m40s                                                                                                                            
    50%                                                                                                                                                         
      |                                                                                                                                                         
    38%                                                                                                                                           ▄             
      |                                                                                                                                           █             
    25%                                                                                                                                         █ █             
      |                                                                                                                                         ████            
    12%                                                                                                                                         ████            
      0                                                                                                                                         ████            
██ MEM   rss   same window   ·   ceiling 64.0M                                                                                                                  
 100.0M                                                                                                                                                         
  80.0M                                                                                                                                                         
  64.0M ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ ceiling    
  40.0M                                                                                                                                          ▄▄▄            
      0                                                                                                                                        ▄████            
        ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────now            
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
██ CONFIG & ENV   e edit                                                    │ ██ BLEATS out then err · / narrow                                                 
                                                                            │out  listening on 0.0.0.0:8080                                                     
────────────────────────────────────────────────────────────────────────────│out  GET /healthz 200 3ms                                                          
process                                                                     │out  GET /v1/orders 200 44ms                                                       
cwd                         (unset)                                         │out  POST /v1/orders 201 88ms                                                      
depends_on                  (default)                                       │out  GET /v1/orders/8821 200 9ms                                                   
fold                        (unset)                                         │out  connection pool: 14/50 in use                                                 
group                       (unset)                                         │                                                                                   
instances                   3                                               │                                                                                   
interpreter                 (unset)                                         │                                                                                   
name                        web                                             │                                                                                   
reuse_port                  (default)                                       │                                                                                   
script                      ./srv                                           │                                                                                   
user                        (unset)                                         │                                                                                   
                                                                            │                                                                                   
────────────────────────────────────────────────────────────────────────────│                                                                                   
logging                                                                     │                                                                                   
err_file                    (unset)                                         │                                                                                   
level_rules                 (default)                                       │                                                                                   
merge_logs                  (default)                                       │                                                                                   
out_file                    (unset)                                         │                                                                                   
                                                                            │                                                                                   
────────────────────────────────────────────────────────────────────────────│                                                                                   
inputs                                                                      │                                                                                   
args                        ["--port","8080"]                               │                                                                                   
channel                     (default)                                       │                                                                                   
environment                 (unset)                                         │                                                                                   
                                                                                                                                                                
esc flock   e edit   J/K next sheep   x stop   R restart   L reload   b full log   / filter                                                      control enabled
