crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__sheep_pane_sparklines.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                       1 in the flock
 ██ SHEEP 20  web   online   pid 48500   restarts 0   uptime 1h 55m   cpu 20.0%   mem 30.0M   fold…
CPU 20s         ▆▅█▅      MEM/CEIL   █████░░░░░                                                    
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
██ CONFIG & ENV   e edit                                                                           
                                                                                                   
────────────────────────────────────────────────────────────────────────────                       
process                                                                                            
cwd                         (unset)                                                                
depends_on                  (default)                                                              
fold                        (unset)                                                                
group                       (unset)                                                                
instances                   3                                                                      
interpreter                 (unset)                                                                
name                        web                                                                    
reuse_port                  (default)                                                              
script                      ./srv                                                                  
user                        (unset)                                                                
                                                                                                   
────────────────────────────────────────────────────────────────────────────                       
logging                                                                                            
err_file                    (unset)                                                                
level_rules                 (default)                                                              
merge_logs                  (default)                                                              
out_file                    (unset)                                                                
                                                                                                   
────────────────────────────────────────────────────────────────────────────                       
inputs                                                                                             
args                        ["--port","8080"]                                                      
channel                     (default)                                                              
environment                 (unset)                                                                
                                                                                                   
esc flock   e edit   J/K next sheep   x stop   R restart   L reload   b full log  … control enabled
