crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__too_narrow.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
too small                   
need 33x6
